--- a/Resources/translations/DdrUtilsBundle.en.yml
+++ b/Resources/translations/DdrUtilsBundle.en.yml
@@ -1,3 +1,6 @@
 security:
     login:
-        forgot_password: Passwort vergessen?
+        forgot_password: Forgot password
+profile:
+    title: Profile
+    edit: Edit profile
